add more HTML and CSS

--- a/index.html
+++ b/index.html
@@ -14,44 +14,63 @@
         <h1>Yassin Abasher</h1>
         <nav>
             <ul>
-                <li>
-                    Resume
-                </li>
-                <li>
-                    About Me
-                </li>
-                <li>
-                    Work
-                </li>
-                <li>
-                    Contact Me
-                </li>
+                <li><a href="Link to resume"></a>Resume</li>
+                <li><a href="#about"></a>About Me</li>
+                <li><a href="#work"></a>My Work</li>
+                <li><a href="#contact"></a>Contact Me</li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <div class="card">
-            <h2>About Me</h2>
-            <p>
-                Hi my name is Yassin Abaher! I am 24 years old and receently starting my journey into coding as my new carrer.
-            </p>
-            <p>
-                Down below you will find many of my works inculding links to the active webpages and repositories.
+        <section class="content">
+            <div class="card">
+                <div id="about" class="about">
+                    <h2>About Me</h2>
+                    <p>
+                        Hi my name is Yassin Abaher! I am 24 years old and receently starting my journey into coding as my new carrer.
+                    </p>
+                    <p>
+                        Down below you will find many of my works inculding links to the active webpages and repositories.
 
-                Feel free to contact me using any of the methods at the bottom of the page!
-            </p>
-        </div>
-        <div class="card">
-            <h2>Work</h2>
-        </div>
-        <div class="card">
-            <h2>Contact Me</h2>
-        </div>
+                        Feel free to contact me using any of the methods at the bottom of the page!
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <h2>Work</h2>
+                <div id="work" class="work">
+                    <div class="project">
+                        <h3>Prework Study Guide</h3>
+                        <a href="https://abasheryassin.github.io/prework-study-guide/">
+                            <img src="assets/images/prework-study-guide-img.png" alt="Screen shot of prework study guide live website">
+                        </a>
+                    </div>
+                    <div class="project">
+                        <h3>Project 2</h3>
+                    </div>
+                    <div class="project">
+                        <h3>Project 3</h3>
+                    </div>
+                    <div class="project">
+                        <h3>More Projects on thier way</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div id="contact" class="contact">
+                    <h2>Contact Me</h2>
+                    <ul>
+                        <li><a href="">Email</a></li>
+                        <li><a href="">Repository</a></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
-        <p>Copyright Abasher, yassin</p>
+        <h4>Copyright Yassin Abasher</h4>
     </footer>
     
 </body>
