Final touches to HTML and CSS

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <h1>Yassin Abasher</h1>
         <nav>
             <ul>
-                <li><a href="Link to resume"></a>Resume</li>
-                <li><a href="#about"></a>About Me</li>
-                <li><a href="#work"></a>My Work</li>
-                <li><a href="#contact"></a>Contact Me</li>
+                <li><a href="Link to resume">Resume</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#work">My Work</a></li>
+                <li><a href="#contact">Contact Me</a></li>
             </ul>
         </nav>
     </header>
@@ -27,13 +27,12 @@
             <div class="card">
                 <div id="about" class="about">
                     <h2>About Me</h2>
+                    <img id="imgp" src="assets/images/Portfolio-photo.png" alt="Profile photo of Yassin Abasher">
                     <p>
-                        Hi my name is Yassin Abaher! I am 24 years old and receently starting my journey into coding as my new carrer.
-                    </p>
-                    <p>
-                        Down below you will find many of my works inculding links to the active webpages and repositories.
-
-                        Feel free to contact me using any of the methods at the bottom of the page!
+                        Hi my name is Yassin Abaher! I am 24 years old and receently starting my journey into coding as my new carrer 
+                        and passion. I enjoy taking care of my house plants and going on walks when the weather is nice. Down below 
+                        you will find many of my works inculding links to the active webpages and repositories. Feel free to contact 
+                        me using any of the methods at the bottom of the page!
                     </p>
                 </div>
             </div>
@@ -47,13 +46,11 @@
                         </a>
                     </div>
                     <div class="project">
-                        <h3>Project 2</h3>
+                        <h3>My Portfloio</h3>
+                        <img src="assets/images/Portfolio.png" alt="Screen shot of my portfolios live webpage">
                     </div>
                     <div class="project">
-                        <h3>Project 3</h3>
-                    </div>
-                    <div class="project">
-                        <h3>More Projects on thier way</h3>
+                        <h3>More Projects on thier way!</h3>
                     </div>
                 </div>
             </div>
