add README and final touches

--- a/index.html
+++ b/index.html
@@ -25,21 +25,27 @@
     <main>
         <section class="content">
             <div class="card">
-                <div id="about" class="about">
+                <div id="about">
                     <h2>About Me</h2>
-                    <img id="imgp" src="assets/images/Portfolio-photo.png" alt="Profile photo of Yassin Abasher">
-                    <p>
-                        Hi my name is Yassin Abaher! I am 24 years old and receently starting my journey into coding as my new carrer 
-                        and passion. I enjoy taking care of my house plants and going on walks when the weather is nice. Down below 
-                        you will find many of my works inculding links to the active webpages and repositories. Feel free to contact 
-                        me using any of the methods at the bottom of the page!
-                    </p>
+                    <div class="about">
+                        <figure>
+                            <img id="img1" src="assets/images/Portfolio-photo.png" alt="Profile photo of Yassin Abasher">
+                        </figure>
+                        <div id="me">
+                            <p>
+                                Hi my name is Yassin Abaher! I am 24 years old and receently starting my journey into coding as my new carrer 
+                                and passion. I enjoy taking care of my house plants and going on walks when the weather is nice. Down below 
+                                you will find many of my works inculding links to the active webpages and repositories. Feel free to contact 
+                                me using any of the methods at the bottom of the page!
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="card">
                 <h2>Work</h2>
                 <div id="work" class="work">
-                    <div class="project">
+                    <div id="img1" class="project">
                         <h3>Prework Study Guide</h3>
                         <a href="https://abasheryassin.github.io/prework-study-guide/">
                             <img src="assets/images/prework-study-guide-img.png" alt="Screen shot of prework study guide live website">
@@ -58,8 +64,8 @@
                 <div id="contact" class="contact">
                     <h2>Contact Me</h2>
                     <ul>
-                        <li><a href="">Email</a></li>
-                        <li><a href="">Repository</a></li>
+                        <li><a href="absheryassin@gmail.com">Email</a></li>
+                        <li><a href="https://github.com/Abasheryassin?tab=repositories">Repository</a></li>
                     </ul>
                 </div>
             </div>
