add search hero

--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
                         </a>
                     </div>
                     <div class="project">
-                        <h3>My Portfloio</h3>
-                        <img src="assets/images/Portfolio.png" alt="Screen shot of my portfolios live webpage">
+                        <h3>Search Hero</h3>
+                        <a href=" https://benmarz10.github.io/Search-Hero/">
+                        <img src="assets/images/Seatch-Hero.png" alt="Screen shot of my portfolios live webpage">
+                        </a>
                     </div>
                     <div class="project">
                         <h3>More Projects on thier way!</h3>
