update with porject

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -29,13 +30,17 @@
                     <h2>About Me</h2>
                     <div class="about">
                         <figure>
-                            <img id="img1" src="assets/images/Portfolio-photo.png" alt="Profile photo of Yassin Abasher">
+                            <img id="img1" src="assets/images/Portfolio-photo.png"
+                                alt="Profile photo of Yassin Abasher">
                         </figure>
                         <div id="me">
                             <p>
-                                Hi my name is Yassin Abaher! I am 24 years old and receently starting my journey into coding as my new carrer 
-                                and passion. I enjoy taking care of my house plants and going on walks when the weather is nice. Down below 
-                                you will find many of my works inculding links to the active webpages and repositories. Feel free to contact 
+                                Hi my name is Yassin Abaher! I am 24 years old and receently starting my journey into
+                                coding as my new carrer
+                                and passion. I enjoy taking care of my house plants and going on walks when the weather
+                                is nice. Down below
+                                you will find many of my works inculding links to the active webpages and repositories.
+                                Feel free to contact
                                 me using any of the methods at the bottom of the page!
                             </p>
                         </div>
@@ -48,17 +53,22 @@
                     <div id="img1" class="project">
                         <h3>Prework Study Guide</h3>
                         <a href="https://abasheryassin.github.io/prework-study-guide/">
-                            <img src="assets/images/prework-study-guide-img.png" alt="Screen shot of prework study guide live website">
+                            <img src="assets/images/prework-study-guide-img.png"
+                                alt="Screen shot of prework study guide live website">
                         </a>
                     </div>
                     <div class="project">
                         <h3>Search Hero</h3>
                         <a href=" https://benmarz10.github.io/Search-Hero/">
-                        <img src="assets/images/Seatch-Hero.png" alt="Screen shot of my portfolios live webpage">
+                            <img src="assets/images/Seatch-Hero.png" alt="Screen shot of my portfolios live webpage">
                         </a>
                     </div>
                     <div class="project">
-                        <h3>More Projects on thier way!</h3>
+                        <h3>Enjoy the Bite!</h3>
+                        <a href="https://lit-wave-65693.herokuapp.com/https://benmarz10.github.io/Search-Hero/">Repository</a>
+                        <a href="https://lit-wave-65693.herokuapp.com/">
+                            <img src="assets/images/enjoy the bite homepage.jpg" alt="Screen shot of my portfolios live webpage">
+                        </a>
                     </div>
                 </div>
             </div>
@@ -77,6 +87,7 @@
     <footer>
         <h4>Copyright Yassin Abasher</h4>
     </footer>
-    
+
 </body>
+
 </html>
