add new project

--- a/index.html
+++ b/index.html
@@ -67,8 +67,16 @@
                         <h3>Enjoy the Bite!</h3>
                         <a href="https://lit-wave-65693.herokuapp.com/https://benmarz10.github.io/Search-Hero/">Repository</a>
                         <a href="https://lit-wave-65693.herokuapp.com/">
-                            <img src="assets/images/enjoy the bite homepage.jpg" alt="Screen shot of my portfolios live webpage">
+                            <img src="assets/images/enjoy the bite homepage.jpg" alt="Screen shot of enjoy the bite live webpage">
                         </a>
+                    </div>
+                    <div class="project">
+                        <h3>The Car Shop</h3>
+                        <a href="https://github.com/JuicinessJ/smokey-nagata">Repository</a>
+                        <a href="https://smokey-nagata.herokuapp.com/">
+                            <img src="assets/images/the-car-shop.png" alt="Screen shot of the car shop live page">
+                        </a>
+
                     </div>
                 </div>
             </div>
